--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,8 +63,16 @@
     <Analyzer Include="/Applications/Unity/Hub/Editor/2022.3.47f1/Unity.app/Contents/Tools/Unity.SourceGenerators/Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets/Scripts/Enemy Stuff/Enemy.cs" />
+    <Compile Include="Assets/Scripts/Enemy Stuff/EnemyRed.cs" />
+    <Compile Include="Assets/Scripts/EnemyController.cs" />
+    <Compile Include="Assets/Scripts/Enemy Stuff/EnemyType.cs" />
     <Compile Include="Assets/Scripts/Bullet.cs" />
+    <Compile Include="Assets/Scripts/Ebullet.cs" />
+    <Compile Include="Assets/Scripts/Enemy Stuff/EnemySpawner.cs" />
     <Compile Include="Assets/Scripts/PlayerController.cs" />
+    <Compile Include="Assets/Scripts/Enemy Stuff/EnemyFactory.cs" />
+    <Compile Include="Assets/Scripts/Enemy Stuff/EnemyBlue.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/license.txt" />
