--- a/Scripts.csproj
+++ b/Scripts.csproj
@@ -1,4 +1,4 @@
-<Project ToolsVersion="Current">
+﻿<Project ToolsVersion="Current">
   <!-- Generated file, do not modify, your changes will be overwritten (use AssetPostprocessor.OnGeneratedCSProject) -->
   <PropertyGroup>
     <BaseIntermediateOutputPath>Temp\obj\$(Configuration)\$(MSBuildProjectName)</BaseIntermediateOutputPath>
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\DeathScreenState.cs" />
     <Compile Include="Assets\Scripts\HomeScreenState.cs" />
     <Compile Include="Assets\Scripts\Enemy Stuff\EnemyRed.cs" />
+    <Compile Include="Assets\Scripts\PowerupSpawner.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Message.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\SpawnMessenger.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\KillMessage.cs" />
