--- a/Tests.csproj
+++ b/Tests.csproj
@@ -19,7 +19,7 @@
     <RootNamespace></RootNamespace>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>EditMode</AssemblyName>
+    <AssemblyName>Tests</AssemblyName>
     <TargetFramework>netstandard2.1</TargetFramework>
     <BaseDirectory>.</BaseDirectory>
   </PropertyGroup>
@@ -63,11 +63,10 @@
     <Analyzer Include="/Applications/Unity/Hub/Editor/2022.3.47f1/Unity.app/Contents/Tools/Unity.SourceGenerators/Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets/Tests/EditMode/SampleTests.cs" />
-    <Compile Include="Assets/Tests/EditMode/HealthTests.cs" />
+    <Compile Include="Assets/Tests/EditMode/Tests/SampleTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets/Tests/EditMode/EditMode.asmdef" />
+    <None Include="Assets/Tests/EditMode/Tests/Tests.asmdef" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -940,7 +939,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Scripts.csproj" />
   </ItemGroup>
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
   <ItemGroup>
