--- a/Scripts.csproj
+++ b/Scripts.csproj
@@ -1,4 +1,4 @@
-<Project ToolsVersion="Current">
+﻿<Project ToolsVersion="Current">
   <!-- Generated file, do not modify, your changes will be overwritten (use AssetPostprocessor.OnGeneratedCSProject) -->
   <PropertyGroup>
     <BaseIntermediateOutputPath>Temp\obj\$(Configuration)\$(MSBuildProjectName)</BaseIntermediateOutputPath>
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\SpawnMessenger.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\KillMessage.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
+    <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\PowerupMessenger.cs" />
     <Compile Include="Assets\Scripts\Speed.cs" />
     <Compile Include="Assets\Scripts\StatTracker.cs" />
     <Compile Include="Assets\Scripts\Powerup.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Assets\Scripts\Ebullet.cs" />
     <Compile Include="Assets\Scripts\Health.cs" />
     <Compile Include="Assets\Scripts\Enemy Stuff\EnemySpawner.cs" />
+    <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\PowerupMessage.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\LevelMessenger.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Enemy Stuff\EnemyFactory.cs" />
@@ -448,10 +450,6 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.YamlDotNet">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Collections.LowLevel.ILSupport">
-      <HintPath>Library\PackageCache\com.unity.collections@1.2.4\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="unityplastic">
