--- a/Assets/Tests/EditMode/EditMode.asmdef
+++ b/Assets/Tests/EditMode/EditMode.asmdef
@@ -2,10 +2,9 @@
     "name": "EditMode",
     "rootNamespace": "",
     "references": [
-        "UnityEditor.TestRunner",
         "UnityEngine.TestRunner",
-        "Scripts",
-        "TNRD.NSubstitute"
+        "UnityEditor.TestRunner",
+        "Scripts"
     ],
     "includePlatforms": [
         "Editor"
@@ -14,11 +13,11 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "Assets/Plugins/NSubstitute.dll",
+        "NSubstitute.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
-        "UNITY_INCLUDE_TESTS",
         "UNITY_INCLUDE_TESTS"
     ],
     "versionDefines": [],
