--- a/Scripts.csproj
+++ b/Scripts.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\Scripts\PowerupSpawner.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Message.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\SpawnMessenger.cs" />
+    <Compile Include="Assets\Scripts\IPowerup.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\KillMessage.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\PowerupMessenger.cs" />
@@ -81,16 +82,19 @@
     <Compile Include="Assets\Scripts\Powerup.cs" />
     <Compile Include="Assets\Scripts\Enemy Stuff\EnemyType.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
+    <Compile Include="Assets\Scripts\TestPowerup.cs" />
     <Compile Include="Assets\Scripts\Singleton.cs" />
     <Compile Include="Assets\Scripts\UI\StatsPanel.cs" />
     <Compile Include="Assets\Scripts\GameStateManager.cs" />
     <Compile Include="Assets\Scripts\WaveManager.cs" />
+    <Compile Include="Assets\Scripts\SamplePowerup.cs" />
     <Compile Include="Assets\Scripts\PowerupHandler.cs" />
     <Compile Include="Assets\Scripts\IGameState.cs" />
     <Compile Include="Assets\Scripts\HealthBar.cs" />
     <Compile Include="Assets\Scripts\Shield.cs" />
     <Compile Include="Assets\Scripts\Ebullet.cs" />
     <Compile Include="Assets\Scripts\Health.cs" />
+    <Compile Include="Assets\Scripts\Audio\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Enemy Stuff\EnemySpawner.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\PowerupMessage.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\LevelMessenger.cs" />
@@ -99,6 +103,7 @@
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\KillMessenger.cs" />
     <Compile Include="Assets\Scripts\UI\UIPanelButton.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messenger.cs" />
+    <Compile Include="Assets\Scripts\ServiceLocator.cs" />
     <Compile Include="Assets\Scripts\FireSpeed.cs" />
     <Compile Include="Assets\Scripts\PubSub Pattern\Messengers\LevelMessage.cs" />
     <Compile Include="Assets\Scripts\GameplayState.cs" />
@@ -478,6 +483,10 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.TextureAssets">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Editor\VisualScripting.Core\EditorAssetResources\Unity.VisualScripting.TextureAssets.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>Assets\Plugins\NSubstitute.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="netstandard">
