--- a/EditMode.csproj
+++ b/EditMode.csproj
@@ -64,8 +64,8 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.47f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Tests\EditMode\StatTrackerTests.cs" />
     <Compile Include="Assets\Tests\EditMode\EnemyTests.cs" />
-    <Compile Include="Assets\Tests\EditMode\SampleTests.cs" />
     <Compile Include="Assets\Tests\EditMode\PowerupHandlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
